...
        internal static let icloud = L10n.tr("Constants", "constants.content.api.icloud", fallback: "iCloud")
      }
      internal enum Button {
        /// Voltar pro início
        internal static let backToHome = L10n.tr("Constants", "constants.content.button.backToHome", fallback: "Voltar pro início")
        /// Continuar
        internal static let `continue` = L10n.tr("Constants", "constants.content.button.continue", fallback: "Continuar")
        /// Nova Atividade
        internal static let newEvent = L10n.tr("Constants", "constants.content.button.newEvent", fallback: "Nova Atividade")
        /// Voltar
        internal static let previous = L10n.tr("Constants", "constants.content.button.previous", fallback: "Voltar")
        /// Leia as referências
        internal static let references = L10n.tr("Constants", "constants.content.button.references", fallback: "Leia as referências")
        /// Marcar Evento
        internal static let scheduleActivity = L10n.tr("Constants", "constants.content.button.schedule_activity", fallback: "Marcar Evento")
        /// Ajustes
        internal static let settings = L10n.tr("Constants", "constants.content.button.settings", fallback: "Ajustes")
        /// Iniciar
        internal static let start = L10n.tr("Constants", "constants.content.button.start", fallback: "Iniciar")
      }
      internal enum Label {
        /// Sua atividade está no calendário!
        internal static let activityOnCalendar = L10n.tr("Constants", "constants.content.label.activity_on_calendar", fallback: "Sua atividade está no calendário!")
        /// Luna
        internal static let appName = L10n.tr("Constants", "constants.content.label.app_name", fallback: "Luna")
...
          internal static let calendarSync = L10n.tr("Constants", "constants.content.label.home.calendar_sync", fallback: "Luna precisa estar conectado com o Calendário para salvar seu ciclo")
          /// Fases do Ciclo Menstrual
          internal static let cyclePhases = L10n.tr("Constants", "constants.content.label.home.cycle_phases", fallback: "Fases do Ciclo Menstrual")
          /// Fase Folicular
          internal static let follicular = L10n.tr("Constants", "constants.content.label.home.follicular", fallback: "Fase Folicular")
          /// Aprenda sobre as
          internal static let learnCycle = L10n.tr("Constants", "constants.content.label.home.learn_cycle", fallback: "Aprenda sobre as")
          /// Fase Lútea
          internal static let luteal = L10n.tr("Constants", "constants.content.label.home.luteal", fallback: "Fase Lútea")
          /// Menstruação
          internal static let menstruation = L10n.tr("Constants", "constants.content.label.home.menstruation", fallback: "Menstruação")
          /// Pra quê olhar pro passado? Ele já passou!
          internal static let noData = L10n.tr("Constants", "constants.content.label.home.no_data", fallback: "Pra quê olhar pro passado? Ele já passou!")
...
          internal static let ovulation = L10n.tr("Constants", "constants.content.label.home.ovulation", fallback: "Ovulação")
          /// Menstruação registrada
          internal static let recordedMenstruation = L10n.tr("Constants", "constants.content.label.home.recordedMenstruation", fallback: "Menstruação registrada")
          /// 1. Vá em ajustes
          internal static let settingsSubtitle = L10n.tr("Constants", "constants.content.label.home.settings_subtitle", fallback: "1. Vá em ajustes")
          /// Você está na
          internal static let youAreIn = L10n.tr("Constants", "constants.content.label.home.youAreIn", fallback: "Você está na")
          internal enum Behavior {
            /// Por trás dos panos
            internal static let behind = L10n.tr("Constants", "constants.content.label.home.behavior.behind", fallback: "Por trás dos panos")
            /// Melhor evitar, hein!
            internal static let better = L10n.tr("Constants", "constants.content.label.home.behavior.better", fallback: "Melhor evitar, hein!")
            /// Quer uma ajuda?
...
