...
            .tap.bind {
                if self.initialDate > self.endDate {
                    let alert = UIAlertController(title: L10n.Constants.Content.Alert.Warning.warning,
                                                  message: L10n.Constants.Content.Alert.Warning.initialDateAfter,
                                                  preferredStyle: .alert)

                    alert.addAction(UIAlertAction(title: "OK",
                                                  style: .default,
                                                  handler: { _ in
                    }))
                    self.present(alert, animated: true, completion: nil)

                } else {
...
